# davfs2

./: ChangeLog  INSTALL  configure.ac  meson.build  meson_options.txt
etc/: davfs2.conf
man/: Makefile.am  davfs2.conf.5  davfs2.conf.5.pot  meson.build  mount.davfs.8  mount.davfs.8.pot  po4a.conf  umount.davfs.8.pot
man/de/: Makefile.am  davfs2.conf.5.in.po  davfs2.conf.5.po.in  meson.build  mount.davfs.8.in.po  mount.davfs.8.po.in  umount.davfs.8.in.po  umount.davfs.8.po.in
man/es/: Makefile.am  davfs2.conf.5.in.po  davfs2.conf.5.po.in  meson.build
po/: cs.po  davfs2.pot  de.po
src/: Makefile.am  cache.c  defaults.h  meson.build  mount_davfs.c  mount_davfs.h  webdav.c
