configure_file(
  input : 'davfs2.conf.5.in.po',
  output : 'davfs2.conf.5',
  configuration : mandata,
  install_dir: mandir + '/de/man5',
)

configure_file(
  input : 'mount.davfs.8.in.po',
  output : 'mount.davfs.8',
  configuration : mandata,
  install_dir: mandir + '/de/man8',
)

configure_file(
  input : 'umount.davfs.8.in.po',
  output : 'umount.davfs.8',
  configuration : mandata,
  install_dir: mandir + '/de/man8',
)
